[gd_scene load_steps=2 format=3 uid="uid://f8ap2b1q9tyxl"]

[ext_resource type="Script" path="res://scripts/achievements_screen.gd" id="1"]

[node name="AchievementsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "üèÖ Achievements"
horizontal_alignment = 1

[node name="StatsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/StatsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="UnlockedLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Unlocked: 0/0"
horizontal_alignment = 1

[node name="PointsLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Total Points: 0"
horizontal_alignment = 1

[node name="RefreshButton" type="Button" parent="MarginContainer/VBoxContainer/StatsPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "üîÑ Refresh"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AchievementsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0
text = "‚Üê Back"

[connection signal="pressed" from="BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StatsPanel/MarginContainer/HBoxContainer/RefreshButton" to="." method="_on_refresh_pressed"]
